fix: CORS y permisos para rol HUESPED